eks/manifest/ingress-multiple-hosts.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: red-blue-ingress
  namespace: default
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/load-balancer-name: red-blue-ingress
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: <ACME Certificate ARN>
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
spec:
  rules:
  - host: red.domain.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: red-service
            port:
              number: 80
  - host: blue.domain.com
    http:
      paths:
      - pathType: ImplementationSpecific
        path: /*
        backend:
          service:
            name: blue-service
            port:
              number: 80
